added saving model

--- a/notebook/DQN.ipynb
+++ b/notebook/DQN.ipynb
@@ -250,8 +250,26 @@
     "        self.optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        self.optimizer.step()\n",
-    "        \n",
     "    \n",
+    "    def load_agent(self, file):\n",
+    "        self.Q.load_state_dict(torch.load(file))\n",
+    "        self.sync_target_q()\n",
+    "        \n",
+    "    def save_agent(self, episode):\n",
+    "        torch.save(self.Q.state_dict(), \"agent_episode_{}.pth\".format(episode))\n",
+    "        \n",
+    "    def play(self, episodes):\n",
+    "        for episode in range(1, episodes+1):\n",
+    "            \n",
+    "            state = self.env.reset()\n",
+    "            for t in count(start=1):\n",
+    "                action = self.get_action(0, state)\n",
+    "                next_state, reward, done, _ = self.env.step(action)\n",
+    "                self.env.render()\n",
+    "                state = next_state\n",
+    "    \n",
+    "    \n",
+    "        \n",
     "    def train(self, episodes, sync_target = 10000, max_eploration=10**5, end_eps=0.1, start_eps = 1, batch_size=32):\n",
     "        steps = 0\n",
     "        for episode in range(1, episodes+1):\n",
