Wrote some extra things

--- a/report/report.tex
+++ b/report/report.tex
@@ -395,13 +395,16 @@
 For the course ``Capita selecta: Artificial Intelligence'' we received the subject of \textbf{Deep Reinforcement learning}.
 In this document we will explain everything we have done to get to know this subject. 
 We will first start with our original plan we had for the demo, what we did with it and what eventually went wrong.
-We will also mention the things we learned from it.
+We will also mention the things we learned from this experience.
 Then, we will explain to which other simulator we switched and how things went from there and which simulations we ran.
 We will finish this document with the things we have learned whilst researching this subject.
 
 
 \section{First simulator}
-
+For our first simulator we maybe saw things a bit too big.
+We wanted to showcase a really cool demo.
+That's why we decided to do deep reinforcement learning with self driving cars since they are all over the news.
+We found some 
 
 \subsection{Subsection Heading Here}
 Subsection text here.
