Wrote some extra things 2

--- a/report/report.tex
+++ b/report/report.tex
@@ -399,13 +399,17 @@ We will also mention the things we learned from this experience.
 Then, we will explain to which other simulator we switched and how things went from there and which simulations we ran.
 We will finish this document with the things we have learned whilst researching this subject.
 
-
 \section{First simulator}
 For our first simulator we maybe saw things a bit too big.
 We wanted to showcase a really cool demo.
 That's why we decided to do deep reinforcement learning with self driving cars since they are all over the news.
-We found some 
+We quickly found some cool simulations online (\textbf{ref naar da deeptraffic gedoe en de udemy simulator}) that we could use for our demo. 
+We decided to go with the Udemy self driving car simulator written in Unity since this was the coolest of them both.
+We had to do some changes to this simulator since it was written to do behavioral cloning but our research was about deep reinforcement learning. 
+Once we made the changes we could finally start to implement a deep reinforcement learning algorithm to write the car by itself. 
 
+
+\section{Second simulator}
 \subsection{Subsection Heading Here}
 Subsection text here.
 
