--- a/report/report.tex
+++ b/report/report.tex
@@ -50,8 +50,7 @@
 % http://www.michaelshell.org/tex/testflow/
 
 
-
-\documentclass[conference]{IEEEtran}
+\documentclass[12pt, conference, compsoc]{IEEEtran}
 % Some Computer Society conferences also require the compsoc mode option,
 % but others use the standard conference format.
 %
@@ -85,6 +84,7 @@
 % When switching from latex to pdflatex and vice-versa, the compiler may
 % have to be run twice to clear warning/error messages.
 
+\usepackage{graphicx}
 
 
 
@@ -392,7 +392,7 @@
 
 \section{Introduction}
 % no \IEEEPARstart
-For the course ``Capita selecta: Artificial Intelligence'' we received the subject of \textbf{Deep Reinforcement learning}.
+For the course ``Capita selecta: Artificial Intelligence'' we received the subject of \textbf{deep reinforcement learning}.
 In this document we will explain everything we have done to get to know this subject. 
 We will first start with our original plan we had for the demo, what we did with it and what eventually went wrong.
 We will also mention the things we learned from this experience.
@@ -403,19 +403,35 @@ We will finish this document with the things we have learned whilst researching 
 For our first simulator we maybe saw things a bit too big.
 We wanted to showcase a really cool demo.
 That's why we decided to do deep reinforcement learning with self driving cars since they are all over the news.
-We quickly found some cool simulations online (\textbf{ref naar da deeptraffic gedoe en de udemy simulator}) that we could use for our demo. 
-We decided to go with the Udemy self driving car simulator written in Unity since this was the coolest of them both.
+We quickly found some cool simulations online namely \emph{DeepTraffic}\cite{MIT:deeptraffic} with a corresponding MIT course available on youtube\cite{MIT:selfdriving} and a simulator written in Unity for a Udacity course\cite{Udacity-course} that we could use for our demo.
+We decided to go with the latter for our demo but since the former was a bit easier to start with, we started with DeepTraffic to get to know our subject.
+
+\subsection{DeepTraffic}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=1in]{DeepTraffic.png}
+\caption{The DeepTraffic simulator\cite{MIT:deeptraffic}}
+\label{deep-traffic}
+\end{figure}
+
+The DeepTraffic simulator (which can be seen in figure \ref{deep-traffic}) is a simulator written in javascript that works in a browser.
+The goal of the simulator is to make an agent that can swiftly maneuver between traffic without making collisions.
+The agent's reward is based on its speed. A high speed means a high reward and a low speed means a low reward. 
+The nice thing about DeepTraffic is that it also has a MIT course\cite{MIT:selfdriving-course} that explains a whole lot of things about self driving cars.
+To prepare ourselves for the task we wanted to accomplish, we watched the full play list (only five video's in total) of this course available on youtube. 
+
+Once we finished the playlist we started with an implementation for the simulator. 
+
+
+\subsection{Udacity course simulator}
+We decided to go with the Udacity self driving car simulator written in Unity since this was the coolest of them both.
 We had to do some changes to this simulator since it was written to do behavioral cloning but our research was about deep reinforcement learning. 
 Once we made the changes we could finally start to implement a deep reinforcement learning algorithm to write the car by itself. 
 
-
 \section{Second simulator}
-\subsection{Subsection Heading Here}
-Subsection text here.
-
-
-\subsubsection{Subsubsection Heading Here}
-Subsubsection text here.
+\subsection{Flash games}
+\subsection{Atari games}
+\subsection{Reinforcement learning}
 
 
 % An example of a floating figure using the graphicx package.
@@ -558,10 +574,14 @@ The conclusion goes here.
 % (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
 
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
+\bibitem{Udacity-course}
+https://eu.udacity.com/course/self-driving-car-engineer-nanodegree--nd013
 
+\bibitem{MIT:deeptraffic}
+Deeptraffic.js, https://selfdrivingcars.mit.edu/deeptraffic/
+
+\bibitem{MIT:selfdriving-course}
+L.~Fridman, MIT 6.S094: \emph{Deep Learning}, https://selfdrivingcars.mit.edu/
 \end{thebibliography}
 
 
