--- a/report/report.tex
+++ b/report/report.tex
@@ -392,7 +392,7 @@
 
 \section{Introduction}
 % no \IEEEPARstart
-For the course ``Capita selecta: Artificial Intelligence'' we received the subject of \textbf{deep reinforcement learning}.
+For the course ``Capita selecta: Artificial Intelligence'' we received the subject of \emph{deep reinforcement learning}.
 In this document we will explain everything we have done to get to know this subject. 
 We will first start with our original plan we had for the demo, what we did with it and what eventually went wrong.
 We will also mention the things we learned from this experience.
@@ -420,14 +420,55 @@ The agent's reward is based on its speed. A high speed means a high reward and a
 The nice thing about DeepTraffic is that it also has a MIT course\cite{MIT:selfdriving-course} that explains a whole lot of things about self driving cars.
 To prepare ourselves for the task we wanted to accomplish, we watched the full play list (only five video's in total) of this course available on youtube. 
 
-Once we finished the playlist we started with an implementation for the simulator. 
+Once we finished the playlist we started with an implementation for this simulator. We created two agents that could respectively go $67$ mph and $69$ mph. This was not the best speed of all time but for us it was a good way to get our feet wet with deep reinforcement learning. The lectures were also very informative about self driving cars. Once we finished this we decided to finally start with the demo we wanted to show.
 
+\subsection{Unity self driving car simulator}
+\begin{figure}[!t]
+\centering
+\includegraphics[width=3in]{Udacity-Simulator}
+\caption{The Unity simulator for the udacity ourse\cite{Udacity-course}}
+\label{Udacity}
+\end{figure}
 
-\subsection{Udacity course simulator}
-We decided to go with the Udacity self driving car simulator written in Unity since this was the coolest of them both.
-We had to do some changes to this simulator since it was written to do behavioral cloning but our research was about deep reinforcement learning. 
-Once we made the changes we could finally start to implement a deep reinforcement learning algorithm to write the car by itself. 
+For our original demo we planned to use the self driving car simulator in Unity that was written for a Udacity course\cite{Udacity-course}.
+The goal of our demo would've been to create an agent that could ride between the lines on a track.
+To do this we had to do some changes to this simulator since it was originally written to do behavioral cloning, this is where a human first shows the A.I. what to do and the agent then has to copy this behavior.
+The changes were rather small, we added a extra text field on the UI and we added a way to know if the car was still on the track or not, we then had to make sure that the simulator could talk with our program.
+This wasn't that hard since the simulator already had a way to send data to an external script by using websockets and the course provided a start template script written in python.
+How the game world looked like can be seen on figure \ref{Udacity}.
+\newline
+\newline
+We used Pytorch\cite{Pytorch} to create a implementation of the DQN. 
+We spent quite some time on creating a good scoring function to describe the task we wanted to do. 
+This step was necessary since the simulator didn't have a reward function. 
+Which functions we tried and the ways our A.I. exploited these functions will be explained in the next section.
+\subsubsection{Scoring functions}
+An important part in reinforcement learning is the creating of a good scoring function. 
+Every small unintended ``bug'' in a scoring function will be exploited by the agent so the creation of such a function should be done with care. We tried several scoring functions but we will describe here the two scoring functions in which the agent found actually a way to beat our intention!
 
+The first scoring function that was exploited by our agent was a function based on lifetime having a higher weight than speed.
+	Our idea was that if the agent would live as long as possible it would progress through the track. 
+	\begin{displaymath}
+touch\_track(speed + 10*time\_alive ) - 10*(1-touch\_track)
+	\end{displaymath}	
+Sadly enough this didn't really happen.
+The agent quickly found out that just by standing still it would get the highest score!
+
+For our second function we learned that giving more weight to the time alive was not beneficial.
+That's why we created a new function where speed and time alive were as important.
+
+\begin{displaymath}
+touch\_track(speed * time\_alive ) - 10*(1-touch\_track)
+\end{displaymath}
+	
+With this function the agent found that it could actually drive in a circle between the two lines of the track whilst still moving at a high velocity.
+
+\subsubsection{Problems with the simulator}
+Sadly we had to stop our efforts of trying to use this simulator for our demo.
+After having spent too much time on scoring functions and getting the simulator up and running we came to the conclusion that the data from the simulator was not being sent fast enough.
+This was due to the websocket implementation they used. 
+We saw that the data would be buffered in-game and data would still be sent long time after we disabled the learning in the simulator.
+We thought that if we would change the websockets to tcp we would've gotten maybe a stable data stream but since this was not assured we decided we've lost way too much time with this already and we decided to move on to our second simulator.
 \section{Second simulator}
 \subsection{Flash games}
 \subsection{Atari games}
@@ -582,6 +623,10 @@ Deeptraffic.js, https://selfdrivingcars.mit.edu/deeptraffic/
 
 \bibitem{MIT:selfdriving-course}
 L.~Fridman, MIT 6.S094: \emph{Deep Learning}, https://selfdrivingcars.mit.edu/
+
+\bibitem{Pytorch}
+http://pytorch.org/
+
 \end{thebibliography}
 
 
