Updated report. Rewrote it more formally. Restructured sections. Added new sections

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,38 +1,3 @@
-@misc{1802.09464,
-  Author = {Matthias Plappert and Marcin Andrychowicz and Alex Ray and Bob McGrew and Bowen Baker and Glenn Powell and Jonas Schneider and Josh Tobin and Maciek Chociej and Peter Welinder and Vikash Kumar and Wojciech Zaremba},
-  Title = {Multi-Goal Reinforcement Learning: Challenging Robotics Environments and Request for Research},
-  Year = {2018},
-  Eprint = {arXiv:1802.09464},
-}
-
-@online{Udacity-course,
-  author = {},
-  title = {Self driving car engineer nanodegree},
-  url = {https://eu.udacity.com/course/self-driving-car-engineer-nanodegree--nd013},
-}
-
-@online{MIT:deeptraffic,
-  author = {},
-  title = {Deeptraffic.js},
-  url = {https://selfdrivingcars.mit.edu/deeptraffic/},
-}
-
-@online{MIT:selfdriving-course,
-  author = {L.~Fridman},
-  title = {MIT 6.S094: \emph{Deep Learning}},
-  url = {https://selfdrivingcars.mit.edu/},
-}
-
-@online{PyTorch,
-title = {PyTorch},
-url = {http://pytorch.org/},
-}
-
-@online{RocketLander,
-title={RocketLander},
-url={https://github.com/EmbersArc/gym},
-}
-
 @article{mnih2015humanlevel,
   added-at = {2015-08-26T14:46:40.000+0200},
   author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A. and Veness, Joel and Bellemare, Marc G. and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K. and Ostrovski, Georg and Petersen, Stig and Beattie, Charles and Sadik, Amir and Antonoglou, Ioannis and King, Helen and Kumaran, Dharshan and Wierstra, Daan and Legg, Shane and Hassabis, Demis},
@@ -54,3 +19,66 @@ url={https://github.com/EmbersArc/gym},
   year = 2015
 }
 
+@article{brief-survey,
+  title={A brief survey of deep reinforcement learning},
+  author={Arulkumaran, Kai and Deisenroth, Marc Peter and Brundage, Miles and Bharath, Anil Anthony},
+  journal={arXiv preprint arXiv:1708.05866},
+  year={2017}
+}
+
+@article{dueling,
+  title={Dueling network architectures for deep reinforcement learning},
+  author={Wang, Ziyu and Schaul, Tom and Hessel, Matteo and Van Hasselt, Hado and Lanctot, Marc and De Freitas, Nando},
+  journal={arXiv preprint arXiv:1511.06581},
+  year={2015}
+}
+
+@article{drqn,
+  author    = {Matthew J. Hausknecht Peter Stone},
+  title     = {Deep Recurrent Q-Learning for Partially Observable MDPs},
+  journal   = {CoRR},
+  volume    = {abs/1507.06527},
+  year      = {2015}
+}
+
+@online{MIT:selfdriving-course,
+  author = {L.~Fridman},
+  title = {MIT 6.S094: Deep Learning for Self-Driving Cars},
+  url = {https://selfdrivingcars.mit.edu/},
+}
+
+@online{MIT:deeptraffic,
+  author = {},
+  title = {Deeptraffic.js},
+  url = {https://selfdrivingcars.mit.edu/deeptraffic/},
+}
+
+@online{Udacity-course,
+  author = {},
+  title = {Self driving car engineer nanodegree},
+  url = {https://eu.udacity.com/course/self-driving-car-engineer-nanodegree--nd013},
+}
+
+@online{PyTorch,
+  author = {},
+  title = {PyTorch},
+  url = {http://pytorch.org/},
+}
+
+@online{drl-doesnt-work-yet,
+  author = {},
+  title = {Deep Reinforcement Learning Doesn't Work Yet},
+  url = {https://eu.udacity.com/course/self-driving-car-engineer-nanodegree--nd013},
+}
+
+@online{openai-gym,
+  author = {},
+  title = {OpenAI Gym},
+  url = {https://github.com/openai/gym},
+}
+
+@online{RocketLander,
+  author = {},
+  title={RocketLander},
+  url={https://github.com/EmbersArc/gym},
+}
